# zepyr-practice

./: .gitignore  README.md
app_bare_display/: CMakeLists.txt  prj.conf
app_bare_display/boards/: promicro_nrf52840_nrf52840_uf2.overlay
app_bare_display/src/: main.c
app_blink/: CMakeLists.txt
app_blink/boards/: promicro_nrf52840.overlay
app_blink/src/: main.c
app_display_graphics/: CMakeLists.txt  prj.conf
app_display_graphics/boards/: promicro_nrf52840_nrf52840_uf2.overlay
app_display_graphics/src/: main.c
app_display_init/: Kconfig  prj.conf
app_display_init/boards/: promicro_nrf52840_nrf52840_uf2.overlay
app_display_init/src/: main.c
app_gauge_v1/: CMakeLists.txt  prj.conf
app_gauge_v1/boards/: promicro_nrf52840_nrf52840_uf2.overlay
app_gauge_v1/mods/: gaugeoptimized.c  gaugev1.c
app_gauge_v1/src/: main.c
app_nice_display/: CMakeLists.txt  prj.conf
app_nice_display/boards/: promicro_nrf52840_nrf52840_uf2.overlay
app_nice_display/src/: main.c
spi-loopback/: CMakeLists.txt  prj.conf
spi-loopback/boards/: promicro_nrf52840_nrf52840_uf2.overlay
spi-loopback/src/: main.c
